# bitpolar

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  SECURITY.md  cbindgen.toml  deny.toml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  publish.yml  release-v2.yml  release.yml  trigger-release.yml
benches/: dataset_bench.rs  quantization_bench.rs  search_bench.rs
benchmarks/: bench_compression.py  bench_kv_cache.py  bench_quick.py  bench_recall.py  bench_throughput.py  bench_vs_faiss.py  download_datasets.py  generate_results.py  requirements.txt
benchmarks/results/: compression.json  kv_cache.json
bitpolar-cli/: Cargo.toml
bitpolar-cli/src/: main.rs
bitpolar-demo/: index.html
bitpolar-go/: bitpolar.go  go.mod
bitpolar-java/: pom.xml
bitpolar-jni/: Cargo.toml
bitpolar-jni/src/: lib.rs
bitpolar-node/: Cargo.toml  package.json
bitpolar-node/src/: lib.rs
bitpolar-pg/: Cargo.toml  bitpolar_pg.control
bitpolar-pg/src/: lib.rs
bitpolar-python/: Cargo.toml  README.md  pyproject.toml
bitpolar-python/python/bitpolar_agno/: __init__.py  knowledge.py
bitpolar-python/python/bitpolar_anthropic/: __init__.py  server.py
bitpolar-python/python/bitpolar_autogen/: __init__.py  memory.py
bitpolar-python/python/bitpolar_bedrock/: __init__.py  middleware.py
bitpolar-python/python/bitpolar_chroma/: __init__.py  store.py
bitpolar-python/python/bitpolar_common/: __init__.py  validation.py
bitpolar-python/python/bitpolar_crewai/: __init__.py  memory.py
bitpolar-python/python/bitpolar_dspy/: __init__.py  retriever.py
bitpolar-python/python/bitpolar_duckdb/: __init__.py  store.py
bitpolar-python/python/bitpolar_elasticsearch/: __init__.py  store.py
bitpolar-python/python/bitpolar_embeddings/: __init__.py  agent_memory.py  core.py  qdrant.py
bitpolar-python/python/bitpolar_faiss/: __init__.py  index.py
bitpolar-python/python/bitpolar_finetune/: __init__.py  loss.py  trainer.py
bitpolar-python/python/bitpolar_google_adk/: __init__.py  tool.py
bitpolar-python/python/bitpolar_haystack/: __init__.py  document_store.py  retriever.py
bitpolar-python/python/bitpolar_jax/: __init__.py  quantizer.py
bitpolar-python/python/bitpolar_langgraph/: __init__.py  checkpointer.py
bitpolar-python/python/bitpolar_letta/: __init__.py  archival.py
bitpolar-python/python/bitpolar_llamacpp/: __init__.py  kv_cache.py
bitpolar-python/python/bitpolar_mcp/: __init__.py  tools.py
bitpolar-python/python/bitpolar_mem0/: __init__.py  store.py
bitpolar-python/python/bitpolar_milvus/: __init__.py  index.py
bitpolar-python/python/bitpolar_mlx/: __init__.py  quantizer.py
bitpolar-python/python/bitpolar_neon/: __init__.py  client.py
bitpolar-python/python/bitpolar_ollama/: __init__.py  client.py
bitpolar-python/python/bitpolar_onnx/: __init__.py  quantizer.py
bitpolar-python/python/bitpolar_openai_agents/: __init__.py  tools.py
bitpolar-python/python/bitpolar_pinecone/: __init__.py  index.py
bitpolar-python/python/bitpolar_pydantic_ai/: __init__.py  tools.py
bitpolar-python/python/bitpolar_redis/: __init__.py  store.py
bitpolar-python/python/bitpolar_sglang/: __init__.py  cache.py
bitpolar-python/python/bitpolar_sklearn/: __init__.py  transformer.py
bitpolar-python/python/bitpolar_smolagents/: __init__.py  tool.py
bitpolar-python/python/bitpolar_spring/: __init__.py
bitpolar-python/python/bitpolar_sqlite_vec/: __init__.py  store.py
bitpolar-python/python/bitpolar_supabase/: __init__.py  client.py
bitpolar-python/python/bitpolar_tensorflow/: __init__.py  layer.py
bitpolar-python/python/bitpolar_tensorrt/: __init__.py  quantizer.py
bitpolar-python/python/bitpolar_torch/: __init__.py  quantizer.py
bitpolar-python/python/bitpolar_torch_native/: __init__.py  backend.py
bitpolar-python/python/bitpolar_transformers/: __init__.py  cache.py
bitpolar-python/python/bitpolar_triton/: __init__.py  backend.py
bitpolar-python/python/bitpolar_vercel/: __init__.py  middleware.py
bitpolar-python/python/bitpolar_vllm/: __init__.py  dynamic_cache.py  quantizer.py  vllm_integration.py
bitpolar-python/python/bitpolar_weaviate/: __init__.py  index.py
bitpolar-python/python/bitpolar_zep/: __init__.py  store.py
bitpolar-python/python/langchain_bitpolar/: __init__.py  vectorstore.py
bitpolar-python/python/llamaindex_bitpolar/: __init__.py  vectorstore.py
bitpolar-python/src/: lib.rs
bitpolar-python/tests/: test_bitpolar.py
bitpolar-server/: Cargo.toml  Dockerfile  build.rs
bitpolar-server/proto/bitpolar/v1/: service.proto
bitpolar-server/src/: main.rs
bitpolar-wasm/: Cargo.toml  package.json
bitpolar-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  INTEGRATION.md  LLAMA_CPP_INTEGRATION.md  MIGRATION.md  MILVUS_INTEGRATION.md  PARAMETERS.md  index.html  llms.txt  robots.txt  sitemap.xml
docs/book/: book.toml
examples/: README.md  integration_adaptive.rs  integration_tiered_storage.rs  llm_kv_cache.rs  llm_multi_head_cache.rs  pattern_federated_search.rs  pattern_multi_tenant.rs  search_brute_force.rs  search_oversampled.rs  search_vector_database.rs
examples/go/: main.go
examples/java/: BitPolarDemo.java
examples/javascript/: 01_quickstart.js  02_node_bindings.js
examples/python/: 01_quickstart.py  02_huggingface_embeddings.py  03_langchain_vectorstore.py  04_qdrant_integration.py  05_vllm_kv_cache.py  06_agent_memory.py  07_mcp_tool_server.py  08_finetuning.py  09_vector_index.py  10_grpc_client.py  11_cli_usage.sh  12_pytorch_quantizer.py  13_llamaindex_vectorstore.py  14_faiss_dropin.py  15_chromadb_integration.py  (+15 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compact_deser.rs  fuzz_qjl_sketch.rs  fuzz_turbo_encode.rs
src/: adaptive.rs  codebook.rs  compat.rs  distortion.rs  error.rs  ffi.rs  kv_cache.rs  lib.rs  metrics.rs  polar.rs  qjl.rs  resilient.rs  rotation.rs  search.rs  stats.rs  tiered.rs  traits.rs  turbo.rs  wht.rs
tests/: conformance_test.rs  integration_test.rs  property_test.proptest-regressions  property_test.rs
(+6 files in other folders)
