[package]
name = "bitpolar-cli"
version = "0.3.1"
edition = "2021"
description = "Command-line tool for BitPolar vector quantization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mmgehlot/bitpolar"

[[bin]]
name = "bitpolar"
path = "src/main.rs"

[dependencies]
bitpolar = { path = ".." }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
indicatif = "0.17"
rand = "0.8"
rand_chacha = "0.3"
