[package]
name = "bitpolar-jni"
version = "0.3.3"
edition = "2021"
description = "JNI bridge for BitPolar — connects Java native methods to Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mmgehlot/bitpolar"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
bitpolar = { path = "..", version = "0.3.3", features = ["std"] }
