[package]
name = "bitpolar-node"
version = "0.3.3"
edition = "2021"
description = "Node.js bindings for BitPolar vector quantization via NAPI-RS"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mmgehlot/bitpolar"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"
bitpolar = { path = "..", version = "0.3.3" }

[build-dependencies]
napi-build = "2"
