[package]
name = "bitpolar-pg"
version = "0.3.1"
edition = "2021"
description = "PostgreSQL extension for BitPolar vector quantization — companion to pgvector"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mmgehlot/bitpolar"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]

[dependencies]
pgrx = "0.12"
bitpolar = { path = "..", version = "0.3.1" }
serde_json = "1"
