[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bitpolar"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]
description = "Near-optimal vector quantization — no training, instant indexing, 3-bit precision"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Manmohan Gehlot" }]
keywords = ["quantization", "vector-search", "compression", "machine-learning"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/mmgehlot/bitpolar"
Documentation = "https://docs.rs/bitpolar"

[tool.maturin]
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
