[package]
name = "bitpolar-server"
version = "0.3.2"
edition = "2021"
description = "gRPC server for BitPolar vector quantization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mmgehlot/bitpolar"

[dependencies]
bitpolar = { path = "..", version = "0.3.2" }
tonic = "0.14"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.12"
