[package]
name = "bitpolar-wasm"
version = "0.3.0"
edition = "2021"
description = "WebAssembly bindings for BitPolar vector quantization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mmgehlot/bitpolar"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
bitpolar = { path = "..", default-features = false, features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
